--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^8.6.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -10,10 +11,26 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "framer-motion": "^6.2.8",
+    "popmotion": "^11.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-in-viewport": "^1.0.0-alpha.20",
+    "react-intersection-observer": "^9.1.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll-motion": "^0.2.1",
+    "react-scroll-parallax": "^3.1.0",
+    "react-scrollspy": "^3.4.3",
+    "react-three-fiber": "^6.0.13",
+    "styled-components": "^5.3.3",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwind-styled-components": "^2.1.4",
+    "three": "^0.136.0",
+    "twin.macro": "^2.8.2",
     "typescript": "^4.5.5",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +56,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-scrollspy": "^3.3.5",
+    "@types/three": "^0.136.1",
+    "@types/webpack-env": "^1.16.3",
+    "autoprefixer": "^10.4.2",
+    "babel-plugin-styled-components": "^2.0.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15"
   }
 }
