--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "davidkristek",
+  "name": "davidkristek-website",
+  "homepage": "https://David-Kristek.github.io/davidkristek-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,6 +35,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -63,6 +66,7 @@
     "@types/webpack-env": "^1.16.3",
     "autoprefixer": "^10.4.2",
     "babel-plugin-styled-components": "^2.0.2",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15"
   }
